# apl_aws

./: .gitignore  CFG.py  README.md  __init__.py  analysis.ipynb  analysis.py  analysis_2.ipynb  apl_meet_app.drawio  app.py  calculators.py  delete.py  dynamodb_utilities.py  file_tree.py  file_tree.txt  mock_data.py  notes.md  notes_2.md  pyproject.toml  pytest.ini  streamlit_app.py  streamlit_logs.txt  surgery.ipynb  testing.ipynb  todo_.py  update.py
archive/: 01_Australian Market.py  06_Tested_or_Untested.py  analysis_2.ipynb  bulk_upload.py  meet_entry.py  read_csvs.py
calculation/: dots.py  goodlift.py  ipf.py  wilks.py  wilks_2.py
crud_ops/: create.py  read.py
database/: query_db.py
documentation/: notes.md
entry_form/: README.md  app.py  dynamo_utilities.ipynb  dynamodb_utilities.py  meet_entry.py  validation.py
meet_entry_web_form/: db_operations.py  functions.py  meet_entry.py  variables.py
pages/: 02_The_Relationship_Between_Lifters_and_Meets.py  03_Comps_per_lifter.py  03_lifters_per_year.py  06_Comps_per_lifter.py  07_Distribution_of_best_lifts.py  07_Records.py  07_distribution_of_best_lifts.py  Australian Market.py  Meets per year.py  distribution of best lift.py  gender_distribution_over_time.py  juicy or dry.py  market_share.py  meets_per_year.py  records.py  unique_lifters_per_year.py
src/: mock_data.py  read_csvs.py  read_meet_data.py  variables.py
streamlit_app_utils/: data_loader.py
templates/: analytics.html  calculate_scores.html  colors.html  entry.html  error.html  judging_lights.html  landing.html  load_the_bar.html  results.html  run_meet.html  summary_table.html  weigh_in.html
tests/: conftest.py  test_app.py  test_dynamodb_utilities.py  test_lambda.py  test_meet_entry.py  test_validation.py
web_site/: __init__.py  app.py  config.py  create.py  delete.py  dynamodb_utilities.py  mock_data.py  (+6 more)
(+10 files in other folders)
