[project]
name = "APL"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Michael Kingston", email = "71872141+mkingopng@users.noreply.github.com"},
    {name = "Michael Kingston", email = "michael.kenneth.kingston@gmail.com"},
]
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.2",
    "arrow>=1.3.0",
    "pyarrow>=15.0.0",
    "plotly>=5.18.0",
    "jupyter-contrib-nbextensions>=0.7.0",
    "notebook>=7.0.7",
    "streamlit>=1.31.0",
    "boto3>=1.34.38",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
