[tool.poetry]
name = "apl-aws"
version = "0.1.0"
description = ""
authors = ["Michael Kingston <71872141+mkingopng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.9.7"
pandas = "^1.4"
plotly = "^5.18.0"
jupyter = "^1.0.0"
flask = "^3.0.2"
pyarrow = "^15.0.0"
streamlit = "^1.31.0"
boto3 = "^1.34.39"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
